--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ dominate==2.3.1
 flake8==3.5.0
 Flask==0.12.2
 Flask-Bootstrap==3.3.7.1
+Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
 gunicorn==19.7.1
 idna==2.6
@@ -18,6 +19,7 @@ psutil==5.3.1
 pycodestyle==2.3.1
 pyflakes==1.6.0
 requests==2.18.4
+SQLAlchemy==1.1.15
 urllib3==1.22
 virtualenv==15.1.0
 virtualenv-clone==0.2.6
