--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,34 @@
-certifi==2017.11.5
-chardet==3.0.4
 click==6.7
+configobj==5.0.6
+cryptography==1.7.1
+deja-dup-caja==0.0.4
 dominate==2.3.1
-flake8==3.5.0
+enum34==1.1.6
 Flask==0.12.2
 Flask-Bootstrap==3.3.7.1
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
-gunicorn==19.7.1
-idna==2.6
+folder-color-caja==0.0.79
+folder-color-common==0.0.79
+idna==2.2
+ipaddress==1.0.17
 itsdangerous==0.24
 Jinja2==2.10
+keyring==10.3.1
+keyrings.alt==2.2
 MarkupSafe==1.0
-mccabe==0.6.1
-pew==1.1.1
-pipenv==9.0.0
-psutil==5.3.1
-pycodestyle==2.3.1
-pyflakes==1.6.0
-requests==2.18.4
+mate-menu==17.4.3
+mysqlclient==1.3.7
+pyasn1==0.1.9
+pycrypto==2.6.1
+pygobject==3.22.0
+PyMySQL==0.7.11
+python-xlib==0.14
+pyxdg==0.25
+SecretStorage==2.3.1
+six==1.10.0
 SQLAlchemy==1.1.15
-urllib3==1.22
 virtualenv==15.1.0
-virtualenv-clone==0.2.6
 visitor==0.1.3
-Werkzeug==0.12.2
+Werkzeug==0.13
 WTForms==2.1
